--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,59 +31,22 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div id="calendar"></div>
-      <div class="time">
-        <ul>
-          <li>9:00 <span>AM</span></li>
-          <li class="halfhour">9:30</li>
-          <li>10:00 <span>AM</span></li>
-          <li class="halfhour">10:30</li>
-          <li>11:00 <span>AM</span></li>
-          <li class="halfhour">11:30</li>
-          <li>12:00 <span>PM</span></li>
-          <li class="halfhour">12:30</li>
-          <li>1:00 <span>PM</span></li>
-          <li class="halfhour">1:30</li>
-          <li>2:00 <span>PM</span></li>
-          <li class="halfhour">2:30</li>
-          <li>3:00 <span>PM</span></li>
-          <li class="halfhour">3:30</li>
-          <li>4:00 <span>PM</span></li>
-          <li class="halfhour">4:30</li>
-          <li>5:00 <span>PM</span></li>
-          <li class="halfhour">5:30</li>
-          <li>6:00 <span>PM</span></li>
-          <li class="halfhour">6:30</li>
-          <li>7:00 <span>PM</span></li>
-          <li class="halfhour">7:30</li>
-          <li>8:00 <span>PM</span></li>
-          <li class="halfhour">8:30</li>
-          <li>9:00 <span>PM</span></li>
-        </ul>
-      </div>
+
+      <!-- Button to refresh cal -->
+      <!-- <button
+        type="button"
+        class="btn btn-primary d-flex justify-content-center"
+        id="start-new-day"
+      >
+        Refresh
+      </button> -->
     </div>
-    <script>
-      var myEvents = [
-        { start: 30, end: 150 }, // start and end are the minutes from midnight
-        { start: 540, end: 600 }, // start and end go from calendar_start to calendar_end
-        { start: 560, end: 620 },
-        { start: 610, end: 670 }
-      ];
 
-      // add events to the calendar
-      $("#calendar").addEvents(myEvents);
-
-      $("#calendar").layOutDay({
-        calendar_width: null,
-        calendar_height: null,
-        calendar_start: 0,
-        calendar_end: 1440,
-        events_selector: ".events",
-        time_selector: null
-      });
-    </script>
     <script src="moment.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
     <script src="script.js"></script>
+    <!-- <script src="demo.js"></script> -->
   </body>
 </html>
